Fix navbar alignment

--- a/css/index.css
+++ b/css/index.css
@@ -237,6 +237,8 @@ span{
 .HomeRight{
     width: 100%;
     padding-right: 0px;
+    justify-content: flex-end;
+    margin-right: 103px;
 }
 
 .HomeNavbarLink1{
@@ -349,6 +351,7 @@ span{
 
 .HomeHeaderText2{
     margin-left: 100px;
+    line-height: 1.3;
     font-family: roboto-condensed;
     font-size: 28px;
     font-weight: 500;
